--- a/src/components/Dashboard/Counselor/Dashboard.css
+++ b/src/components/Dashboard/Counselor/Dashboard.css
@@ -1,9 +1,15 @@
 body,
 p {
   color: #080808;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Sans-serif", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+}
+
+.side-nav:focus {
+  color: #6B9EFC !important;
+  border-radius: 0px;
+  border-right: 4px solid #080808;
 }
 
 .text {
@@ -14,4 +20,14 @@ p {
   color: #01c9de;
   font-size: 2em;
   font-family: Poppins, Montserrat, Helvetica, sans-serif;
+}
+
+.Card {
+  border-radius: 1em;
+  margin-bottom: 1em;
+}
+
+.CardGroup {
+  border-radius: 1em;
+  background-color: #FDFDFD;
 }
